syntax = "proto3";
package agent;
option go_package = "github.com/asiafrolova/Multi-user-calculator/proto";
message GetTaskRequest{

}
message GetTaskResponse{
    string Id = 1;
    string Arg1 = 2;
    string Arg2 = 3;
    string Operation = 4;
    float Operation_time = 5;
  
}
message PushResultRequest{
    string Id = 1;
    float Result = 2;
    string Error = 3;
}
message PushResultResponse{
    
}
service CalculatorService{
    rpc GetTask (GetTaskRequest) returns (GetTaskResponse);
    rpc PushResult (PushResultRequest) returns (PushResultResponse);
}
